--- a/recipe-dashboard/index.html
+++ b/recipe-dashboard/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- Font Awesome Script -->
+    <script
+      src="https://kit.fontawesome.com/71959eee97.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Project 5 | Recipe DashBoard</title>
   </head>
   <body>
     <div id="root"></div>
